--- a/index.css
+++ b/index.css
@@ -155,3 +155,12 @@ body {
     height: 100px;
     border: solid rgb(0, 104, 215) 5px;
  }
+
+ p {
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+ }
+
